Attempt to fix overflow issue 2

--- a/src/index.css
+++ b/src/index.css
@@ -56,5 +56,5 @@ body,
 }
 
 .address {
-  word-wrap: "break-word"
+  overflow-wrap: "break-word"
 }
